Newest wf-human-variation version

--- a/nextflow.config
+++ b/nextflow.config
@@ -72,7 +72,6 @@ params {
 
     // annotation
     annotation = true
-    annotation_threads = 8
 
     // snp
     clair3_model_path = null // used for overriding the guessed clair3 model
@@ -95,7 +94,7 @@ params {
     min_cov = 2
     min_qual = 2
     refine_snp_with_sv = true
-custom_config_base="/castor/project/proj_nobackup/test_epi/configs"
+
     // sv
     tr_bed= null
     // filterCalls
@@ -143,41 +142,31 @@ custom_config_base="/castor/project/proj_nobackup/test_epi/configs"
         agent = null
 
         // container sha
-        e2l_base_tag = "sha1b503961726c6e02b6b908297a9797db953b46a3"
+        e2l_base_tag = "sha0800eade05e4cbb75d45421633c78c4f6320b2f6"
         e2l_snp_tag = "sha0d7e7e8e8207d9d23fdf50a34ceb577da364373e"
         e2l_sv_tag = "shabc3ac908a14705f248cdf49f218956ec33e93ef9"
-        e2l_mod_tag = "shaa6e616571797d97ae2736c7ebdcb4613fe77f263"
+        e2l_mod_tag = "shaeedb131a939d3eea2f9bd4dbecec805c0fa20bdb"
         basecaller_container = "dorado:sha1433bfc3146fd0dc94ad9648452364f2327cf1b0"
         cnv_tag = "sha428cb19e51370020ccf29ec2af4eead44c6a17c2"
         str_tag = "sha28799bc3058fa256c01c1f07c87f04e4ade1fcc1"
         snpeff_tag = "sha4f289afaf754c7a3e0b9ffb6c0b5be0f89a5cf04"
-        common_sha = "sha0a6dc21fac17291f4acb2e0f67bcdec7bf63e6b7"
+        common_sha = "sha91452ece4f647f62b32dac3a614635a6f0d7f8b5"
     }
 }
-
-
-includeConfig "../configs/nfcore_custom.config"
 
 manifest {
     name            = 'epi2me-labs/wf-human-variation'
     author          = 'Oxford Nanopore Technologies'
     homePage        = 'https://github.com/epi2me-labs/wf-human-variation'
-    description     = 'Basecalling, SNV calling, SV calling, modified base calling of human samples.'
+    description     = 'Basecalling, SNV calling, SV calling, modified base calling, CNV calling, and STR genotyping of human samples.'
     mainScript      = 'main.nf'
     nextflowVersion = '>=23.04.2'
-    version         = '1.8.0'
+    version         = '1.9.2'
 }
 
 epi2melabs {
     tags = "human,variant calling,whole genome,basecalling"
     icon = "faIdCard"
-}
-
-executor {
-    $local {
-        cpus = 16
-        memory = "16 GB"
-    }
 }
 
 // used by default for "standard" (docker) and singularity profiles,
@@ -186,35 +175,27 @@ process {
     container = "ontresearch/${params.wf.name}:${params.wf.e2l_base_tag}"
     withLabel:wf_human_snp {
         container = "ontresearch/wf-human-variation-snp:${params.wf.e2l_snp_tag}"
-        time = 6.h
     }
     withLabel:wf_human_sv {
         container = "ontresearch/wf-human-variation-sv:${params.wf.e2l_sv_tag}"
-        time = 6.h
     }
     withLabel:wf_human_mod {
-        container = "ontresearch/wf-human-variation-methyl:${params.wf.e2l_mod_tag}"
-        time = 6.h
+        container = "ontresearch/modkit:${params.wf.e2l_mod_tag}"
     }
     withLabel:wf_basecalling {
         container = "nanoporetech/${params.wf.basecaller_container}"
-        time = 6.h
     }
     withLabel:wf_cnv {
         container = "ontresearch/wf-cnv:${params.wf.cnv_tag}"
-        time = 6.h
     }
     withLabel:wf_human_str {
         container = "ontresearch/wf-human-variation-str:${params.wf.str_tag}"
-        time = 6.h
     }
     withLabel:snpeff_annotation {
         container = "ontresearch/snpeff:${params.wf.snpeff_tag}"
-        time = 6.h
     }
     withLabel:wf_common {
         container = "ontresearch/wf-common:${params.wf.common_sha}"
-        time = 6.h
     }
 
     shell = ['/bin/bash', '-euo', 'pipefail']
@@ -277,7 +258,7 @@ profiles {
                 container = { "${params.aws_image_prefix}-wf-human-variation-sv:${params.wf.e2l_sv_tag}-root" }
             }
             withLabel:wf_human_mod {
-                container = { "${params.aws_image_prefix}-wf-human-variation-methyl:${params.wf.e2l_mod_tag}-root" }
+                container = { "${params.aws_image_prefix}-modkit:${params.wf.e2l_mod_tag}-root" }
             }
             withLabel:wf_basecalling {
                 container = { "${params.aws_image_prefix}-${params.wf.basecaller_container}-root" }
